2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove make/custom/Makefile.
	* Makefile.am: Cosmetics.
	* automake/compile.am: Remove compilation rules.
	Remove $(ARCH) directory generation.

2003-11-26	Joel Sherrill <joel@OARcorp.com>

	* MAINTAINERS: New file.

2003-11-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/bsp-alias.m4, aclocal/canonical-target-name.m4,
	aclocal/check-bsps.m4, aclocal/check-custom-bsp.m4,
	aclocal/enable-bare.m4, aclocal/enable-cxx.m4,
	aclocal/enable-inlines.m4, aclocal/enable-itron.m4,
	aclocal/enable-multiprocessing.m4, aclocal/enable-networking.m4,
	aclocal/enable-posix.m4, aclocal/enable-rdbg.m4,
	aclocal/enable-rtems-debug.m4, aclocal/enable-rtemsbsp.m4,
	aclocal/enable-tests.m4, aclocal/multilib.m4,
	aclocal/path-ksh.m4, aclocal/project-root.m4,
	aclocal/rtems-top.m4, aclocal/tool-paths.m4,
	acinclude.m4:
	Fix underquoting to silence automake-1.8.

2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config-ml.in: Don't built multilib variant normal (-mn) for
	h8300-*-rtems*.

2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/config-subdirs.m4: Remove.
	* Makefile.am: Reflect changes above.

2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonical-host.m4: Remove.
	* Makefile.am: Reflect changes above.

2003-10-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Use $RTEMS_BSP_FAMILY instead of RTEMS_BSP_ALIAS in
	c/src/lib/libbsp/*/acinclude.m4.

2003-10-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-cpu.m4: Remove.
	* Makefile.am: Remove reference to aclocal/check-cpu.m4.
	* acinclude.m4 (RTEMS_TARGET_CONFIG_SUBDIR): Check for presence of
	$1 in $srcdir before adding dir to SUBDIRS.

2003-09-26  Joel Sherrill <joel@OARcorp.com>

	* README.configure, aclocal/rtems-cpu-subdirs.m4: Removing HPPA port.
